--- a/code/composer.json
+++ b/code/composer.json
@@ -7,7 +7,7 @@
                 "type": "joomlatools-extension",
                 "version": "2.2.3",
                 "dist": {
-                    "url": "https://github.com/techjoomla/com_tjqueue/releases/download/0.0.1/pkg_tjqueue_v0.0.1_610731ad.zip",
+                    "url": "file:///home/dev-kb-core/public_html/com_tjfields.zip",
                     "type": "zip"
                 },
                 "require": {
