--- a/code/composer.json
+++ b/code/composer.json
@@ -7,8 +7,8 @@
                 "type": "joomlatools-extension",
                 "version": "2.2.3",
                 "dist": {
-                    "url": "https://www.dropbox.com/s/qy5n2snbjw2erx4/pkg_shika_v1.3.23_b9135b66.zip",
-                    "type": "zip"
+                    "url": "./tmp/pkg_shika_v1.3.23_b9135b66.zip",
+                    "type": "path"
                 },
                 "require": {
                     "joomlatools/composer": "*"
