Issue #150912: Help doc for Joomla role

--- a/code/composer.json
+++ b/code/composer.json
@@ -7,7 +7,7 @@
                 "type": "joomlatools-extension",
                 "version": "2.2.3",
                 "dist": {
-                    "url": "./tmp/pkg_shika_v1.3.23_b9135b66.zip",
+                    "url": "./tmp/pkg_shika_v1.3.23_b9135b66",
                     "type": "path"
                 },
                 "require": {
